<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string-array name="tabsCursoAccion">
        <item>.</item>
        <item>opcion1</item>
        <item>opcion2</item>
        <item>opcion3</item>
    </string-array>
    <string-array name="spnIntencion">
        <item>Mensaje</item>
        <item>Observación</item>
        <item>Recomendación</item>
        <item>Incidencias</item>
    </string-array>
    <string-array name="spnMenuTarea">
        <item>Editar</item>
        <item>Eliminar</item>

    </string-array>
    <string-array name="evaluacionResultadoList">
        <item>APMS Cantidad</item>
        <item>APMS Regularidad y Equivalencia</item>
        <item>APMS Gestión de datos e Incertidumbre</item>
        <item>APMS Forma, movimiento y localización</item>
    </string-array>
    <string-array name="recomendaciones">
        <item>--Seleccione Recomendacion--</item>
        <item>Reforzamiento</item>
        <item>Apoyo Famimilar</item>
        <item>Chequeo Médico</item>
        <item>Chequeo Nutricional</item>
    </string-array>
    <string name="app_name">Docente Mentor 3.0</string>
  <string name="login.progress.titulo">Iniciando</string>
  <string name="title_activity_mensajes_mvp">Mensajes</string>
  <string name="login.progress.message">Por favor, espere…</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="login.configurarion.success.title">Bienvenido %1$s</string>
  <string name="login.configurarion.success.descripcion">Colegio: %1$s</string>
  <string name="login.configurarion.error">Ocurrio un error: %1$s</string>
  <string name="title_activity_lista">ListaActivity</string>
  <string name="title_activity_list_cursos">ListCursosActivity</string>
  <string name="tabsActivity.toolbar.nombreCurso">Nombre Curso</string>
  <string name="tabsActivity.toolbar.periodoCurso">Periodo</string>
  <string name="tabsActivity.toolbar.nombreDocente">Nombre Docente</string>
  <string name="tabsActivity.toolbar.tareaPendiente">Tarea Pendiente</string>
  <string name="ListaCurso.Header.nombresApellidosAlumnos">Nombres Apellidos</string>
  <string name="ListaCurso.Header.myCorreo">myCorreo@gmail.com</string>
  <string name="ListaCurso.menu.actualizar">Actualizar</string>
  <string name="tabAlumno.errorMadre">No Registrada</string>
  <string name="tabAlumno.errorPadre">No Registrado</string>
  <string name="Registro_nullo">No Registrado</string>
  <string name="contactos">Selecciona Contactos</string>
  <string name="month_hint">Month (zero-indexed int)</string>
  <string name="date_hint">Date (int)</string>
  <string name="year_hint">Year (int)</string>
  <string name="set">Set</string>
  <string name="no_value">--</string>
  <string name="calendar_date_picker_set">Set Date</string>
  <string name="calendar_date_picker_result_values">Year: %1$s\nMonth: %2$s\nDay: %3$s</string>
  <string name="radial_time_picker">Set Time</string>
  <string name="radial_time_picker_result_value">%1$d:%2$d</string>
  <string name="date_picker_set">Set Date</string>
  <string name="date_picker_result_value">Year: %1$s\nMonth: %2$s\nDay: %3$s</string>
  <string name="expiration_picker_set">Set Expiration</string>
  <string name="expiration_picker_result_value">%1$s/%2$s</string>
  <string name="hms_picker_set">Set HMS</string>
  <string name="hms_picker_result_value_multiline">Hours: %1$s\nMinutes: %2$s\nSeconds: %3$s\nNegative : %4$b</string>
  <string name="hms_picker_result_value_oneline">H:%1$s, M:%2$s, S:%3$s</string>
  <string name="time_picker_set">Set Time</string>
  <string name="time_picker_result_value">%1$s:%2$s</string>
  <string name="timezone_picker_set">Set Time Zone</string>
  <string name="recurrence_picker_set">Set Recurrence</string>
  <string name="number_picker_set">Set Number</string>
  <string name="number_picker_result_value">Number: %1$s\nDecimal: %2$s\nIs negative: %3$b\nFull number: %4$s</string>
  <string name="colorprimary_text">Here is colorPrimary</string>
  <string name="button_label_custom_ok">Okay</string>
  <string name="button_label_custom_cancel">Nop</string>
  <string name="dialog_dismissed">Dialog dismissed</string>
  <string name="cerrar_sesi_n">Cerrar Sesión</string>
  <string name="exportar_mensajes">Exportar Mensajes</string>
  <string name="exportar_asistencias">Exportar Asistencias</string>
  <string name="exportar_notas">Exportar Notas</string>
  <string name="importar_calendario">Importar Calendario Periodo</string>
  <string name="fragment.gruop.item.team.image.description">Imagen del grupo</string>
  <string name="team.description.name">Imagen del equipo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description_user_img">Member Image</string>
    <string name="img_description_delete">Eliminar Miembro</string>
    <string name="action_create_team">Crear Equipo</string>
    <string name="action_create_teamlist">Finalizar</string>
    <string name="create_team_msg_invalidad_name">Introduce un nombre válido</string>
    <string name="create_team_msg_invalid_members_count">Agregar Integrantes al Equipo</string>
    <string name="create_team_msg_invalidad_selected_image">Seleccionar una imagen por favor</string>
    <string name="teamlist_msg_invalid_listname">Ingresar Nombre</string>
    <string name="teamlist_msg_invalid_teamcount">Agregar 1 o más Equipos</string>
    <string name="group_msg_error_loading_groups">Error Cargando Grupos</string>
    <string name="create_team_txt_agrupation">Agrupar por</string>
    <string name="teamlist_msg_invalid_listcantidad">Número de equipos no permitido</string>
    <string name="evalIndividual">Eval. Individual</string>
    <string name="evalGlobal">Eval. Individual</string>
    <string name="mensaje">Enviar Mensaje</string>
    <string name="title_activity_mpv">MpvActivity</string>
    <string name="dni">DNI :</string>
    <string name="title_activity_crear_rubros">crear Rubros</string>
    <string name="activity_createteamlist_error_restoring_team">Error restaurando Equipo</string>
    <string name="activity_teamlist_message_teamdeleted">Equipo eliminado</string>
    <string name="activity_teamlist_message_teamdeleted_error">No se pudo eliminar al Equipo</string>
    <string name="global_message_undo">Deshacer</string>
    <string name="activity_teamlist_teamremoved">Equipo Eliminado</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="global_btn_text_finalizar">Finalizar</string>
    <string name="global_btn_text_back">Atrás</string>
    <string name="global_btn_text_next">Siguiente</string>
    <string name="evaluacionindividual_msg_error_invalidnota">Nota inválida.</string>
    <string name="accesos">Accesos</string>
    <string name="title_activity_tareas_pendiente">TareasPendienteActivity</string>
    <string name="title_activity_detalle_tarea">DetalleTareaActivity</string>
    <string name="newTarea">Nueva Tarea</string>
    <string name="ItemTareas.Tarea.FechaLimite">Sin límite de entrega</string>
    <string name="ingrese_descripcion">Ingrese Descripción</string>
    <string name="tareas.dialog.editar">Editando Tarea</string>
    <string name="sesion_evaluacion_title">Alumnos </string>
    <string name="sesion_evaluacion_grupo_title">Grupos </string>
    <string name="sesion_evaluacion_grupo_message_grupo_no_asignado">Seleccione un grupo</string>
    <string name="sesion_evaluacion_grupo_message_grupo_por_defecto">Lista de grupo por defecto</string>
    <string name="sesion_evaluacion_agreagar_grupo_message_error_al_guardar_datos">Error al guardar los grupos</string>
    <string name="sesion_evaluacion_grupo_tabla_sin_rubro">Agregue\nRubro Evaluación</string>
    <string name="sesion_evaluacion_grupo_tabla_sin_grupos">Agregue\nGrupos de Evaluación</string>
    <string name="sesion_evaluacion_grupo_tabla_sin_alumnos">No Existe\nAlumnos al Curso</string>
    <string name="fragment_rubrica_bidimiensional_message_hint_rubrica">Título rubríca</string>
    <string name="fragment_rubrica_bidimiensional_message_hint_alias">Descripción</string>
    <string name="fragment_rubrica_bidimiensional_message_hint_competencias">Competencias</string>
    <string name="fragment_rubrica_bidimiensional_message_hint_campoaccion">Campo Acción</string>
    <string name="fragment_rubrica_bidimiensional_message_hint_tiponota">Nivel de Logro</string>
    <string name="fragment_create_rubbid_firstheader_title">Categorías</string>
    <string name="action_save">Guardar</string>
    <string name="evaluacionindividual_mssg_lastalumn">No hay más alumnos para evaluar.</string>
    <string name="evaluacionindividual_mssg_firsttalumn">Éste es el primer alumno de la lista.</string>
    <string name="empty_data">Información no hay registros</string>
    <string name="empty_list_destinos"><b>Información</b> \nNo se ha Encontrado Personas Para enviar el Mensaje</string>
    <string name="empty_data2"> Información no hay registros</string>
    <string name="empty_calendario">Seleccioné bimestre</string>
    <string name="empty_aistencias"> No se generaron asistencias: Lista de alumnos vacia</string>
    <string name="login_btn_ingresar">Ingresar</string>
    <string name="login_username_hint">Usuario :</string>
    <string name="login_error_saving_session">Error guardando la sesión</string>
    <string name="createrubbid_error_getting_competencias">No se pudieron obtener las competencias</string>
    <string name="createrubbid_error_competencias_empty">No hay competencias</string>
    <string name="createrubbid_error_compos_accion_empty">No hay Campos Acción</string>
    <string name="msg_crearRubroEvaluacion_selecionar_campotematico">Seleccione un Campo Tematico</string>
    <string name="createrubbid_error_indicadores_empty">No hay indicadores</string>
    <string name="createrubbid_error_getting_tiponota">Error obteniendo los tipos de notas.</string>
    <string name="createrubbid_competencias_dialog_title">Seleccionar Competencias</string>
    <string name="global_app_version_incompatible">Version de la app Incompatible.</string>
    <string name="in_progress">En progreso…</string>
    <string name="title_activity_detalle_mensaje">DetalleMensajeActivity</string>
    <string name="textview">TextView</string>
    <string name="createrubbid_tiponota_dialog_title">Seleccionar Tipo Nota</string>
    <string name="fragment_rubrica_bidimiensional_message_hint_escala">Escala</string>
    <string name="fragment_rubrica_bidimiensional_message_hint_tipoevaluacion">Tipo Evaluación</string>
    <string name="fragment_rubrica_bidimiensional_message_hint_forma_evaluacion">Forma Evaluación</string>
    <string name="fragment_rubrica_bidimensional_cabecera">Rúbrica</string>
    <string name="fragment_rubrica_bidimensional_detalle">Criterios</string>
    <string name="global_action_create">Crear</string>
    <string name="global_action_update">Actualizar</string>
    <string name="global_action_import">Importar</string>
    <string name="fragment_rubrica_bidimiensional_message_hint_tiponivel">Nivel de Logro</string>
    <string name="fragment_create_rubbid_title_tiponivel">Seleccionar Tipo Nivel</string>
    <string name="global_message_sucess">Listo</string>
    <string name="createrubbid_formaevaluacion_dialog_title">Forma Evaluación</string>
    <string name="createrubbid_tipoevaluacion_dialog_title">Tipo Evaluación</string>
    <string name="global_update_alumnos">Actualizar Alumnos</string>
    <string name="global_update_foto_alumnos">Fotos de los Alumno</string>
    <string name="gpvch_header">¡Nueva versión disponible!</string>
    <string name="gpvch_button_positive">Actualizar la versión actual</string>
    <string name="gpvch_button_negative">Recordar más tarde</string>
    <string name="gpvch_new_version_info_title">Que hay de nuevo:</string>
</resources>