<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:cardBackgroundColor="@color/md_white_1000"
        app:cardCornerRadius="24dp"
        app:elevation="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView164"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:text="@string/gpvch_header"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <LinearLayout
                android:id="@+id/linearLayout12"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView164">

                <ImageView
                    android:id="@+id/img_icon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="0.3"
                    android:scaleType="centerInside"
                    android:src="@drawable/gpvch_app_icon" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvVersionCode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/gpvch_dialog_text_color" />

                    <LinearLayout
                        android:id="@+id/lnChangesInfo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/gpvch_tv_header_whats_new"
                            android:text="@string/gpvch_new_version_info_title"
                            android:textColor="@color/gpvch_dialog_text_color"
                            android:textStyle="bold" />

                        <ScrollView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="5dp">

                            <TextView
                                android:id="@+id/tvChanges"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/gpvch_dialog_text_color" />
                        </ScrollView>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btn_actualizar"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:text="@string/gpvch_button_positive"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout12" />

            <Button
                android:id="@+id/btn_cancelar"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="8dp"
                android:text="@string/gpvch_button_negative"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_actualizar" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>

